# NeuralCoach

./: .gitignore  docker-compose.yml
ai/: .gitignore  requirements.txt
ai/lstm_autoencoder/: Dockerfile  calibrate_k_rating.py  draw_keypoints.py  lstm_architecture.json  lstm_autoenkoder.py  lstm_weights.weights.h5  metrics.py
ai/openvino/: human_pose_estimation_3d_demo.py  images_capture.py  openvino_service.py
ai/openvino/modules/: parse_poses.py
ai/openvino/pose_extractor/: wrapper.cpp
ai/training_plan/: dataset_analysis.txt  generator.py  user_profile_example.json
backend/: auth.py  database.py  neuralcoach.db
backend/diet/: DietPlanGenerator.py  RecipeRag.py
backend/routers/: __init__.py  analysis.py  community.py  dashboard.py
backend/scripts/: check_exercises.py  create_tables.py  exercises_database.sql  fix_user_sequence.py  seed_achievements.py  seed_challenges.py  seed_database.py  seed_db.py
backend/services/: autoencoder_client.py
backend/tests/: test_auth.py  test_services.py
frontend/frontend/: package-lock.json  package.json
frontend/frontend/app/: layout.tsx
pom/: README.md
pom/ai/lstm_autoencoder/: autoencoder_service.py  instruction.md  mean.npy  requirements.txt  std.npy
pom/ai/openvino/: Dockerfile  monitors.py  process_all_videos.py  requirements.txt
pom/ai/openvino/pose_extractor/: CMakeLists.txt
pom/ai/openvino/pose_extractor/public/human-pose-estimation-3d-0001/FP16/: human-pose-estimation-3d-0001.xml
pom/backend/: Dockerfile  email_config.py  main.py  models.py  requirements.txt  schemas.py  test_env.py
(+64 files in other folders)
